@@ -362,7 +362,8 @@ pm-mixed-trace-astatine=Mixed trace astatine
 pm-trace-astatine-209=Trace astatine-209
 pm-trace-astatine-210=Trace astatine-210
 pm-trace-astatine-211=Trace astatine-211
-pm-mixed-astatine-filled-MOT-trap=Mixed astatine magneto orbital trap
+pm-mixed-astatine-filled-magneto-orbital-trap=Mixed astatine magneto orbital trap
+pm-cadnium-sulfate=Cadnium sulfate
 
 automation-science-pack=Transition Metal pack
 logistic-science-pack=Advanced Transition Metal pack
